--- a/style.scss
+++ b/style.scss
@@ -134,10 +134,7 @@ body {
 .top-content {
     display: flex;
     justify-content: space-around;
-    .repositories {
-        padding-bottom: 6px;
-        border-bottom: 2px solid #FD8C73;
-    }
+    
     .tittle-repository , .tittle-star {
         display: flex;
         align-items: center;
@@ -147,6 +144,10 @@ body {
             line-height: 19px;
             color: #000;
             margin-left: 11px;
+        }
+
+        img, h1 {
+            opacity: 0.5;
         }
 
         .quantity {
@@ -244,11 +245,11 @@ body {
             margin-top: 16px;
         }
 
-        .star-fork {
+        .star-fork, .language-fork {
             display: flex;
             margin-top: 18px;
 
-            .stars , .forks {
+            .stars , .forks, .language-starred {
                 display: flex;
                 margin-right: 36px;
 
@@ -257,5 +258,126 @@ body {
                 }
             }
         }
+    }
+}
+
+.content-starreds {
+    display: none;
+}
+
+.content-repositories {
+    display: none;
+}
+
+.show-content {
+    display: flex;
+}
+
+.show-top-content {
+    padding-bottom: 6px;
+    border-bottom: 2px solid #FD8C73;
+
+    .tittle-repository, .tittle-star {
+        img, h1 {
+            opacity: 1 !important;
+        }
+    }
+}
+
+//Filtros
+.open-filter {
+    transform: translateY(0%) !important;
+    
+}
+.filter-type, .filter-language {
+    position: fixed;
+    background-color: #fff;
+    height: 90%;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    transform: translateY(100%);
+    transition: all 0.5s ease;
+    z-index: 1;
+
+    &::after {
+        content: "";
+        position: absolute;
+        background: #C4C4C4;
+        border-radius: 5px;
+        width: 100px;
+        height: 8px;
+        top: 16px;
+        left: 37%;
+        right: 37%;
+    }
+
+    .container-filters {
+        padding: 24px;
+    }
+
+    .title-filter {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 36px;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 28px;
+        color: #000000;
+        margin-bottom: 40px;
+    }
+
+    .checkboxes {
+        display: flex;
+        flex-direction: column;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        color: #000000;
+        padding: 16px 18px;
+        list-style: none;
+
+        li {
+            width: 100%;
+            margin-bottom: 24px;
+            display: flex;
+            align-items: center;
+
+            input {
+                width: 20px;
+                height: 20px;
+                margin-right: 16px;
+            }
+        }
+    }
+}
+
+.container-geral {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.5;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+.over-active {
+    overflow: hidden;
+
+    .overlay {
+        display: block;
     }
 }
