--- a/style.scss
+++ b/style.scss
@@ -225,6 +225,10 @@ body {
                 font-weight: 400;
                 font-size: 14px;
                 line-height: 16px;
+
+                img {
+                    display: none;
+                }
             }
             #input-search:focus {
                 margin-left: 20px;
