--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,66 @@ body {
     background-color: #fff;
 }
 
+//Header
+.container-header {
+    height: 100%;
+    background-color: #24292E;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 22px;
+
+    .header-left {
+        display: flex;
+        align-items: center;
+    }
+
+    .header-right {
+        background-color: #3a4148;
+        display: flex;
+        justify-content: space-between;
+        width: 30%;
+        border-radius: 8px;
+
+        input {
+            background-color: #3a4148;
+            color: #fff;
+            border: none;
+            outline: none;
+            margin: 5px;
+
+            &::placeholder {
+                color: #b1b1b1;
+            }
+        }
+        button {
+            background: none;
+            border: none;
+            margin-right: 8px;
+
+            img {
+                filter: brightness(100);
+                width: 16px;
+                height: 16px;
+            }
+        }
+    }
+
+    span {
+        margin-left: 22px;
+        color: #fff;
+    }
+    .span1 {
+        font-weight: 400;
+        font-size: 24px;
+    }
+
+    .span2 {
+        font-weight: 300;
+        font-size: 16px;
+    }
+
+}
 //TOP PROFILE START
 .container-top {
     max-width: 100%;
@@ -112,11 +172,16 @@ body {
 
                 .info {
                     padding: 8px;
+                    display: flex;
+                    align-items: center;
+
+                    span {
+                        margin-left: 8px;
+                    }
                 }
                 .text-information {
                     font-weight: 400;
                     font-size: 14px;
-                    line-height: 16px;
                     color: #0587FF;
                 }
             }
@@ -323,7 +388,6 @@ body {
     transform: translateY(100%);
     transition: all 0.5s ease;
     z-index: 1;
-    cursor: move;
 
     &::after {
         content: "";
@@ -405,5 +469,70 @@ body {
 
     .overlay {
         display: block;
+    }
+}
+
+//tablets
+
+@media  screen and (min-width:481px) {
+    .container-geral {
+        display: flex;
+        
+        .container-top {
+            width: 100%;
+
+            .menu-informations {
+                display: none !important;
+            }
+            .informations {
+                height: 100% !important;
+                opacity: 1 !important;
+                visibility: visible !important;
+                background: none !important;
+            }
+        }
+
+        .container-main {
+            margin-top: 40px;
+            padding-right: 16px;
+
+            .container-search {
+                .search-filter {
+                    background: none;
+                    flex-direction: column;
+                    align-items: flex-start;
+
+                    .search-area {
+                        flex-direction: row-reverse;
+                        justify-content: space-between;
+                        margin-top: 20px;
+                        padding: 8px 0;
+                        border-bottom: 1px solid #f4f4f4;
+
+                        #input-search {
+                            background: none;
+                            font-size: 18px;
+
+                            &:focus {
+                                margin: 0;
+                            }
+                        }
+                        img {
+                            filter: brightness(0);
+                            opacity: 0.5;
+                        }
+                    }
+                }
+            }
+
+            .filter-type , .filter-language {
+                &
+                .container-filters {
+                    .title-filter {
+                        display: none;
+                    }
+                }
+            }
+        }
     }
 }
